<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:adenda="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tron_lock_screen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/fragment1"
            android:name="sdk.adenda.widget.DateTimeFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            adenda:date_time_txt_align="center"
            adenda:date_time_txt_shadow="true"
            tools:layout="@layout/date_time_fragment" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/pin_entry"
                android:scrollHorizontally="true"
                android:singleLine="true"

                android:textIsSelectable="true"
                android:textSize="25sp" />
        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No1"
                android:textSize="25sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No2"
                android:textSize="25sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No3"
                android:textSize="25sp"
                android:typeface="serif" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No4"
                android:textSize="25sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No5"
                android:textSize="25sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No6"
                android:textSize="25sp"
                android:typeface="serif" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No7"
                android:textSize="25sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No8"
                android:textSize="25sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No9"
                android:textSize="25sp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/buttonasterisk"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/Asterisk"
                android:textSize="25sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/No0"
                android:textSize="25sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/buttonok"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/roundedbutton"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/Ok"
                android:textSize="25sp"
                android:typeface="serif" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/SlideToUnlock"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <ir.silvertech.cheathelper.SlideButton
            android:id="@+id/adenda_unlock_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"

            android:clickable="false"
            android:max="70"
            android:progressDrawable="@drawable/seekbar"
            android:thumb="@drawable/slider"
            android:thumbOffset="2dp" />
    </LinearLayout>


</FrameLayout>